Passed inline styles through twig to allow the cdn_url() twig function to be used.

--- a/templates/pages/page.html.twig
+++ b/templates/pages/page.html.twig
@@ -6,6 +6,6 @@
 {% endblock %}
 {% block stylesheets %}
     {% if styles is defined %}
-        {{ styles|raw }}
+        {{ include(template_from_string(styles|raw)) }}
     {% endif %}
 {% endblock %}
