--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -58,7 +58,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav mr-auto">
             <li class="nav-item{% if selectedNav is defined and selectedNav == 'home' %} active{% endif %}">
                 <a href="{{ path('home') }}" class="nav-link">Home</a>
             </li>
@@ -72,6 +72,12 @@
                 <a href="{{ path('contact') }}" class="nav-link">Contact</a>
             </li>
         </ul>
+        {% if (app.user) %}
+        <span class="navbar-text">
+            Welcome {{ app.user.firstName ~ " " ~ app.user.surname }}! <a href="{{ path('app_logout') }}">Logout?</a>
+            <img src="{{ app.user.avatar }}" class="rounded mx-auto" height="24"/>
+        </span>
+        {% endif %}
     </div>
 </nav>
 
