--- a/templates/admin/config/index.html.twig
+++ b/templates/admin/config/index.html.twig
@@ -8,9 +8,9 @@
                 <h1 class="display-3">Configuration</h1>
                 <p class="lead text-danger">Caution must be exercised when modifying entries in here.</p>
                 <ul class="list-group">
-                    {% for item in existingConfig %}
+                    {% for slug, item in existingConfig %}
                         <li class="list-group-item d-flex justify-content-between align-items-center">
-                            {{ item.getSlug() }}
+                            {{ slug }}
                             <span>
                                 <span class="badge badge-primary badge-pill">{{ item.getValue() }}</span>
                                 <a href="{{ url('admin_config_edit', {slug: item.getSlug()}) }}"><span class="oi oi-pencil"></span></a>
