Added validation to value in edit config form and changed layout due to form validation

--- a/templates/admin/config/add.html.twig
+++ b/templates/admin/config/add.html.twig
@@ -1,6 +1,5 @@
 {% extends 'admin.html.twig' %}
-{% form_theme form with ['bootstrap_4_horizontal_layout.html.twig'] %}
-
+{% form_theme form with ['bootstrap_4_layout.html.twig'] %}
 {% block body %}
     <div class="container">
         <div class="row">
