--- a/templates/admin/config/index.html.twig
+++ b/templates/admin/config/index.html.twig
@@ -17,6 +17,7 @@
                     <h2 class="display-4" id="config-group-{{ group.getSlug() }}">{{ group.getName() }}</h2>
                     <ul class="list-group">
                         {% for slug, item in existingConfig %}
+                            {%  if item.getConfigGroup() is same as(group)  %}
                             <li class="list-group-item d-flex justify-content-between align-items-center">
                                 {{ slug }}
                                 <span>
@@ -27,6 +28,7 @@
                                     {% endif %}
                                 </span>
                             </li>
+                            {% endif  %}
                         {% endfor %}
                     </ul>
                     {% if is_granted('ROLE_SUPERADMIN') %}
