Added cog icon to settings nav item

--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -53,7 +53,7 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a href="{{ path('admin_config') }}" class="nav-link" id="navbarConfigLink">Settings</a>
+                <a href="{{ path('admin_config') }}" class="nav-link" id="navbarConfigLink"><span class="oi oi-cog"></span> Settings</a>
             </li>
         </ul>
     </div>
