--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -52,7 +52,7 @@
         </div>
     </div>
 {% endif %}
-<nav class="{{ config('nav.class') }}">
+<nav class="{{ config('nav.class.core')|config_filter_var }} {{ config('nav.class.colour')|config_filter_var }}">
     <a class="navbar-brand" href="#">The Villa at The Bay</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
